@@ -1,13 +1,12 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/01/03 12:56:13 adrianp Exp $
-#
+# $NetBSD: Makefile,v 1.2 2007/09/20 19:18:43 jlam Exp $
 
-DISTNAME=	courier-analog-0.13
+DISTNAME=	courier-analog-0.14
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=courier/}
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	adrianp@NetBSD.org
-HOMEPAGE=	http://courier.sourceforge.net/
+MAINTAINER=	jlam@pkgsrc.org
+HOMEPAGE=	http://www.courier-mta.org/
 COMMENT=	Courier log analyzer
 
 USE_TOOLS+=	perl:run
