@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.2052 2007/09/20 13:41:56 ghen Exp $
+$NetBSD: CHANGES-2007,v 1.2053 2007/09/20 19:18:43 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3795,3 +3795,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated sysutils/bacula-gnome-console to 2.2.4nb1 [ghen 2007-09-20]
 	Updated sysutils/bacula-tray-monitor to 2.2.4 [ghen 2007-09-20]
 	Updated sysutils/bacula-wx-console to 2.2.4 [ghen 2007-09-20]
+	Updated mail/courier-analog to 0.14 [jlam 2007-09-20]
